fix mobile menu popup.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -48,12 +48,12 @@
         </a></li>
       </ul>
       <ul class="mobile">
-        <li><a href="/" class="js_showMobileNav"><i class="icon"><span class="fui-list"></span></i></a></li>
+        <li><a href="/#mobileNav" class="js_showMobileNav"><i class="icon"><span class="fui-list"></span></i></a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- <div class="mobileNavWrapper">
+  <div class="mobileNavWrapper">
     <nav class="navi">
       <ul>
         <li><a href="/">Work</a></li>
@@ -63,7 +63,7 @@
         <li><a href="/" class="js_showSearch js_hideMobileNav"><i class="icon"></i></a></li>
       </ul>
     </nav>
-  </div> -->
+  </div>
 
   <section class="welcomeWrapper">
     <figure style="background-image: url(/img/cute_profile.png);">
@@ -256,6 +256,7 @@
     </ul>
   </nav>
 </header>
+<script type="text/javascript" src="js/mainPage/imagelightbox.min.js"></script>
 <script type="text/javascript" src="js/mainPage/scripts-ck.js"></script>
 
 </body></html>
