--- a/public/css/mainPage/style.css
+++ b/public/css/mainPage/style.css
@@ -914,7 +914,8 @@ a
 	display: none;
 }
 .mobileNavWrapper
-{
+{	
+	display: none;
 	background: #272f38;
 	box-sizing: content-box;
 	display: block;
