fix the mobile menu.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -59,8 +59,8 @@
         <li><a href="/">Work</a></li>
         <li><a href="/">Blog</a></li>
         <li><a href="/">About</a></li>
-        <li><a href="mailto:junwang6302@gmail.com" class="js_showContact"><i class="icon icon-bubbles"></i></a></li>
-        <li><a href="/" class="js_showSearch js_hideMobileNav"><i class="icon"></i></a></li>
+        <li><a href="mailto:junwang6302@gmail.com" class="js_showContact"><i class="icon"><img class="mail" src="img/icons/svg/mail.svg" alt="Mail"></i></a></li>
+        <li><a href="/" class="js_showSearch js_hideMobileNav"><i class="icon"><span class="fui-search"></span></i></a></li>
       </ul>
     </nav>
   </div>
