fix mobile menu.

--- a/public/css/mainPage/style.css
+++ b/public/css/mainPage/style.css
@@ -915,7 +915,7 @@ a
 }
 .mobileNavWrapper
 {	
-	background: #272f38;
+	background: #446CB3;
 	box-sizing: content-box;
 	display: none;
 	height: 100%;
