--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -252,7 +252,7 @@
       </li>
     </ul>
     <ul class="mobile">
-      <li><a href="/" class="js_showMobileNav"><i class="icon"><span class="fui-list"></span></i></a></li>
+      <li><a href="/#mobileNav" class="js_showMobileNav"><i class="icon"><span class="fui-list"></span></i></a></li>
     </ul>
   </nav>
 </header>
