--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -11,10 +11,11 @@
 	<link rel="stylesheet" href="css/lib/flat-ui.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/mainPage/style.css" type="text/css" media="screen">
 	<script type="text/javascript" src="/js/lib/jquery.min.js"></script>
+  <script type="text/javascript" src="/js/lib/angular.js"></script>
 
 </head>
 
-<body id="top">
+<body id="top" ng-app="articleListApp">
 <!-- start: Loader -->
 <div class="loadingWrapper" style="top: 100%; display: none; opacity: 0.9;">
   <div class="loading">
@@ -32,9 +33,9 @@
         <a href="/">Jun Wang</a>
       </h1>
       <ul class="prim">
-        <li><a href="/">Work</a></li>
+        <li><a href="https://www.tweekaboo.com/our-story">Work</a></li>
         <li><a href="/">Blog</a></li>
-        <li><a href="/">About</a></li>
+        <li><a href="http://ie.linkedin.com/in/webjun">About</a></li>
       </ul>
       <ul class="sec">
         <li>
@@ -56,9 +57,9 @@
   <div class="mobileNavWrapper">
     <nav class="navi">
       <ul>
-        <li><a href="/">Work</a></li>
+        <li><a href="https://www.tweekaboo.com/our-story">Work</a></li>
         <li><a href="/">Blog</a></li>
-        <li><a href="/">About</a></li>
+        <li><a href="http://ie.linkedin.com/in/webjun">About</a></li>
         <li><a href="mailto:junwang6302@gmail.com" class="js_showContact"><i class="icon"><img class="mail" src="img/icons/svg/mail.svg" alt="Mail"></i></a></li>
         <li><a href="/" class="js_showSearch js_hideMobileNav"><i class="icon"><span class="fui-search"></span></i></a></li>
       </ul>
@@ -78,16 +79,16 @@
   </section>
 
 
-  <section class="articleArchiv">
-    <ul class="sameHeight">
-          <li style="height: 474px;">
-        <a href="/" rel="bookmark" title=" Ray-Ban Polarized Tour 2014 — #iampolarized  #polarizedtour2014">
-          <span class="date">30, June 2014</span>
-          <h2>xxxx xxxxx xxxx xxxx xxxxx</h2>
+  <section class="articleArchiv" ng-controller="mainCtrl">
+    <ul class="sameHeight" >
+      <li style="height: 474px;" ng-repeat="article in articles">
+        <a href="/article?id={{article.id}}" rel="bookmark" title=" Ray-Ban Polarized Tour 2014 — #iampolarized  #polarizedtour2014">
+          <span class="date">{{article.date}}</span>
+          <h2>{{article.subject}}</h2>
           <div class="readMore">Read Article<i class="icon"><span class="fui-arrow-right"></span></i></div>
         </a>
       </li>
-          <li style="height: 474px;">
+      <!-- <li style="height: 474px;">
         <a href="/" rel="bookmark" title=" CSS Media Queries: Das Problem mit fixen Breakpoints">
           <span class="date">19, May 2014</span>
           <h2>xxxx xxxxx xxxx xxxx xxxxx</h2>
@@ -121,8 +122,8 @@
           <h2>xxxx xxxxx xxxx xxxx xxxxx</h2>
           <div class="readMore">Read Article<i class="icon"><span class="fui-arrow-right"></span></i></div>
         </a>
-      </li>
-            </ul>
+      </li> -->
+    </ul>
     <a class="getMoreButton" href="/">More Articles</a>
   </section>
 
@@ -235,9 +236,9 @@
       <a href="/">Jun Wang</a>
     </h1>
     <ul class="prim">
-      <li><a href="/">Work</a></li>
+      <li><a href="https://www.tweekaboo.com/our-story">Work</a></li>
       <li><a href="/">Blog</a></li>
-      <li><a href="/">About</a></li>
+      <li><a href="http://ie.linkedin.com/in/webjun">About</a></li>
     </ul>
     <ul class="sec">
       <li>
@@ -258,5 +259,5 @@
 </header>
 <script type="text/javascript" src="js/mainPage/imagelightbox.min.js"></script>
 <script type="text/javascript" src="js/mainPage/scripts-ck.js"></script>
-
+<script type="text/javascript" src="js/articleList/articleList.js"></script>
 </body></html>
