--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -34,7 +34,7 @@
       </h1>
       <ul class="prim">
         <li><a href="https://www.tweekaboo.com/our-story">Work</a></li>
-        <li><a href="/">Blog</a></li>
+        <li><a href="/articlelist">Blog</a></li>
         <li><a href="http://ie.linkedin.com/in/webjun">About</a></li>
       </ul>
       <ul class="sec">
@@ -58,7 +58,7 @@
     <nav class="navi">
       <ul>
         <li><a href="https://www.tweekaboo.com/our-story">Work</a></li>
-        <li><a href="/">Blog</a></li>
+        <li><a href="/articlelist">Blog</a></li>
         <li><a href="http://ie.linkedin.com/in/webjun">About</a></li>
         <li><a href="mailto:junwang6302@gmail.com" class="js_showContact"><i class="icon"><img class="mail" src="img/icons/svg/mail.svg" alt="Mail"></i></a></li>
         <li><a href="/" class="js_showSearch js_hideMobileNav"><i class="icon"><span class="fui-search"></span></i></a></li>
@@ -237,7 +237,7 @@
     </h1>
     <ul class="prim">
       <li><a href="https://www.tweekaboo.com/our-story">Work</a></li>
-      <li><a href="/">Blog</a></li>
+      <li><a href="/articlelist">Blog</a></li>
       <li><a href="http://ie.linkedin.com/in/webjun">About</a></li>
     </ul>
     <ul class="sec">
