add url for more link.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -73,7 +73,7 @@
         <h3>Hi, I'm Jun Wang, an Ireland based web developer.<br>Who want to make the world slightly better....</h3>
       </figcaption>
     </figure>
-    <a href="/" class="scrollDown" id="article">
+    <a href="/articlelist" class="scrollDown" id="article">
       <i class="icon"><span class="fui-triangle-down down-arrow"></span></i>Read my Articles
     </a>
   </section>
