fix no view value issue

--- a/application/views/scripts/index/article.phtml
+++ b/application/views/scripts/index/article.phtml
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="css/mainPage/style.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/article/style.css" type="text/css" media="screen">
 	<script>
-		window.article_id = "<?=$this->article_id ?>";
+		window.article_id = "<?php echo $this->article_id?>";
 	</script>
 </head>
 <body ng-app="articleApp">
