--- a/application/views/scripts/index/article.phtml
+++ b/application/views/scripts/index/article.phtml
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="css/article/style.css" type="text/css" media="screen">
 	<script>
 		window.article_id = "<?php echo $this->article_id?>";
+	    window.userHash = "<?php echo $this->userHash?>";
 	</script>
 </head>
 <body ng-app="articleApp">
