--- a/application/views/scripts/index/articlelist.phtml
+++ b/application/views/scripts/index/articlelist.phtml
@@ -13,6 +13,9 @@
 	<link rel="stylesheet" href="css/lib/flat-ui.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/mainPage/style.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/articleList/style.css" type="text/css" media="screen">
+	<script>
+		window.userHash = "<?php echo $this->userHash?>";
+	</script>
 </head>
 <body ng-app="articleListApp">
 
