add tag input on addArticle page.

--- a/application/views/scripts/index/addarticle.phtml
+++ b/application/views/scripts/index/addarticle.phtml
@@ -77,6 +77,9 @@
 	  		
 	  		<div class="subject-container">
 	  			<input type="text" placeholder="Please type subject here.." class="form-control subject-input" id="subject-input"/>
+
+	  			<input type="text" placeholder="Please tag your article here.." class="form-control tag-input" id="tag-input"/>
+	  			
 	  		</div>
 
 	  		<textarea id="input" style="width:400px; height:200px"></textarea>
