--- a/public/css/addArticle/style.scss
+++ b/public/css/addArticle/style.scss
@@ -10,11 +10,19 @@
 		cursor: pointer;
 	}
 	.subject-container{
-		height: 50px;
+		overflow: hidden;
 		width: 80%;
 		margin: auto;
 	}
 	.subject-input{
     	float: left;
+	}
+	.tag-input{
+		float: right;
+	}
+}
+@media only screen and (max-width: 568px){
+	.tag-input{
+		float: left !important;
 	}
 }
