increase articles limit to 50.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -141,7 +141,7 @@
         <div class="homeButton"><span></span></div>
         <div class="camera"></div>
         <figure>
-          <a class="link" href="/">
+          <a class="link" href="https://www.tweekaboo.com">
   		      <!-- <img class="preview" src="/img/tweekaboo_0.jpg" alt="Tweekaboo"> -->
             <img class="helper" src="/img/tweekaboo_0.jpg" alt="helper">
   		    </a>
